fix non-deduped per-year stats for number of codes/categories; other cleanup

--- a/the_new_trademark_complexity.tex
+++ b/the_new_trademark_complexity.tex
@@ -338,7 +338,7 @@ Design search codes fit into this picture in a somewhat counterintuitive way. Al
 %\caption{\label{fig:4} Frequency distribution of number of design search codes per nonword mark (1986 - 2023)}
 %\end{figure}
 
-Figure~\ref{fig:4} shows the mean and median number of codes per mark per year from 1986 through 2023. Over time, the mean number of codes has increased, edging upward from 4.31 codes per nonword mark in 1986 to 4.99 codes per mark in 2023. The median remains relatively constant, though it is not immune to the general upward trend. These statistics are consistent with an increasing number of outlier applications with an especially high number of codes.
+Figure~\ref{fig:4} shows the mean and median number of codes per mark per year from 1986 through 2023. Over time, the mean number of codes has increased, edging upward from 3.20 codes per nonword mark in 1986 to 3.41 codes per mark in 2023. The median is 3 in all years except for between 1994 and 2001, when it drops to 2. These statistics are consistent with an increasing number of outlier applications with an especially high number of codes.
 
 \begin{figure}[H]
 \centering
@@ -346,7 +346,7 @@ Figure~\ref{fig:4} shows the mean and median number of codes per mark per year f
 \caption{\label{fig:4} Mean and median number of design search codes for nonword trademark applications filed at the USPTO per year (1986 - 2023)}
 \end{figure}
 
-Zooming in slightly more, Figure~\ref{fig:5} shows the yearly numbers of nonword applications filed at the USPTO with more than 5, 10, and 15 design search codes. Each shows a sharp increase in recent decades. More impressively, nonword applications with more than 10 and 15 codes exhibit a clear increase even when shown as percentages of the total number of all applications per year. (The trend for nonword applications with more than five codes is more ambiguous—visual inspection reveals an increasing trend, but the proportion of such applications in 1986 is higher than in 2023.) Put otherwise, high-code applications have increased as a proportion of all applications, even though the larger set to which they belong (nonword applications) is simultaneously becoming a smaller proportion of all applications.\footnote{[Notably, we observe the same trend even if we narrow the data down to include only applications that ultimately registered or only applications whose design search codes would have been subject to the USPTO's above-discussed review-and-recoding process.]}
+Zooming in slightly more, Figure~\ref{fig:5} shows the yearly numbers of nonword applications filed at the USPTO with more than 5, 10, and 15 design search codes. Each shows a sharp increase in recent decades. More impressively, nonword applications with more than 10 and 15 codes exhibit a clear increase even when shown as percentages of the total number of all applications per year. (The trend for nonword applications with more than five codes is more ambiguous—visual inspection reveals an increasing trend, but the proportion of such applications in 1986 is marginally higher than in 2023.) Put otherwise, applications with the highest numbers of codes have increased as a proportion of all applications, even though the larger set to which they belong (nonword applications) is simultaneously becoming a smaller proportion of all applications.\footnote{[Notably, we observe the same trend even if we narrow the data down to include only applications that ultimately registered or only applications whose design search codes would have been subject to the USPTO's above-discussed review-and-recoding process.]}
 
 \begin{figure}[H]
 \centering
@@ -364,7 +364,7 @@ Thus, in recent decades, high-code applications have become more common. This re
 
 \begin{enumerate}
 
-\item[i.] \textit{Categories of codes}. For the period from 1986 to 2023, the mean number of categories per nonword application is 1.85 (sd = 1.03), and the median number of categories is 2. Naturally, the range of values here is narrower than it is for number of codes: the nonword application with the most categories has 20. The mean number of categories per nonword application in each year from 1986 to 2023 shows a very slight increase (from 2.16 in 1986 to 2.36 in 2023), though the median number of categories doesn't change at all. Moreover, as with number of codes, the number of applications with high numbers of different categories increases over time, although an upward trend is less clear when looking at high-category applications as a percentage of all applications. All in all, this data confirms what we already know: we are seeing greater numbers of nonword applications that have many design search codes, and, concomitantly, a greater likelihood of having different categories of codes.
+\item[i.] \textit{Categories of codes}. For the period from 1986 to 2023, the mean number of categories per nonword application is 1.85 (sd = 1.03), and the median number of categories is 2. Naturally, the range of values here is narrower than it is for number of codes: the nonword application with the most categories has 20. The change over time in the mean and median number of categories per year mirrors the change in the mean and median number of codes per year: the mean increases slightly, from 1.84 in 1986 to 1.87 in 2023\footnote{The mean number of categories reaches a minimum of 1.63 in 2001 and a maximum of 2.01 in 2009.}, and the median stays constant at 2, except for between 1995 and 2001, when it drops to 1. Moreover, as with number of codes, applications with high numbers of different categories have grown over time, and applications with especially high numbers of different categories have grown as a percentage of all applications.\footnote{Nonword applications with more than 5 categories have risen as a percentage of all applications by about 0.1\% from 1986 to 2023.} All in all, this data confirms what we already know: we are seeing greater numbers of nonword applications that have many design search codes, and, concomitantly, a greater likelihood of having different categories of codes.\footnote{Whereas the mean number of codes for all marks is 3.18, the mean number of codes for marks with more than 3 different categories is 6.97, and the mean number of codes for marks with more than 5 different categories is 10.87.}
 
 \item[ii.] \textit{Non-basic codes}. Non-basic codes reveal a different side to this story. From 1986 to 2023, the number of applications with at least one non-basic code has markedly risen. But it has fallen as a percentage of the total number of applications per year. And although the number of applications with especially high numbers of non-basic codes has increased over that time period, that may say more about the general trend toward higher numbers of marks with many design codes than it says about a trend toward higher numbers of ``non-basic'' shapes. Indeed, the average number of basic codes per application over the same time period shows a slight upward trend. And if we look at applications with particularly high numbers of basic codes, we see an increase \emph{even if we take into account the broader increase in number of applications filed per year}. Put otherwise, it seems we are seeing a trend toward marks with high numbers of codes that correspond to basic, simple shapes.
 
