--- a/trademark_design_codes.Rmd
+++ b/trademark_design_codes.Rmd
@@ -8,9 +8,10 @@ Plot number of trademark applications/registrations per year from 1986-2023.
 ```{r load_data}
 library(data.table)
 library(dplyr)
+library(tidyr)
 library(lubridate)
-library(forcats)
 library(ggplot2)
+library(patchwork)
 library(tikzDevice)
 options(tz = 'America/New_York')
 
@@ -29,7 +30,9 @@ attorney <- fread('/Volumes/EXTERNALHD1/csv/correspondent_domrep_attorney.csv')
 
 case_file_filtered <- case_file |>
   filter((filing_dt >= '1986-01-01'), (filing_dt < '2024-01-01')) |> # removes all rows where filing_dt is NA
-  mutate(year = year(filing_dt))
+  mutate(year = year(filing_dt)) |>
+  select(serial_no, filing_dt, registration_no, registration_dt, publication_dt, mark_draw_cd, mark_id_char, acq_dist_in, lb_use_file_in, supp_reg_in, serv_mark_in, trade_mark_in, cert_mark_in, coll_memb_mark_in, coll_serv_mark_in, coll_trade_mark_in, cert_mark_in, draw_color_cur_in, abandon_dt, reg_cancel_dt, year) |>
+  arrange(filing_dt)
 
 case_file_filtered_totals <- case_file_filtered |>
   #filter(grepl('^1+|^3+|^4+|^5+', mark_draw_cd)) |>
@@ -43,7 +46,7 @@ case_file_filtered_totals <- case_file_filtered |>
   filter(!duplicated(year)) |>
   mutate(percentage_published = pub_total/app_total)
   
-molten_filtered_totals <- pivot_longer(select(case_file_filtered_totals, year, app_total, pub_total), cols = c('app_total', 'pub_total'), names_to = 'variable', values_to = 'total')
+molten_filtered_totals <- pivot_longer(select(case_file_filtered_totals, year, pub_total, app_total), cols = c('pub_total', 'app_total'), names_to = 'variable', values_to = 'total')
 
 ```
 
@@ -51,18 +54,19 @@ molten_filtered_totals <- pivot_longer(select(case_file_filtered_totals, year, a
 
 theme_set(theme_classic())
 
-tikz(file = './graphics/figure_1.tex', width = 4.5, height = 3.5)
+tikz(file = './graphics/figure_1.tex', width = 4.5, height = 4)
 
 figure_1 <- ggplot(molten_filtered_totals, aes(year, total, fill = variable)) +
-  geom_col(position = 'dodge') +
+  geom_col(position = position_dodge2(reverse = FALSE)) +
   labs(x = 'Year', y = 'Number') +
   scale_fill_manual(name = '', labels = c('Applications', 'Publications'), values = c('#203769', '#099999')) +
-  scale_x_continuous(breaks = seq(1985, 2025, by = 5), limits = c(1986, 2023), expand = c(0, 0)) +
-  scale_y_continuous(breaks = seq(0, 700000, by = 100000), expand = c(0, 0), labels = scales::label_comma()) +
-  theme(axis.title.x = element_text(vjust = -2, size = 10),
-        axis.title.y = element_text(vjust = 3, size = 10),
-        axis.text.x = element_text(size = 6),
-        axis.text.y = element_text(size = 6))
+  scale_x_continuous(breaks = seq(1985, 2024, by = 5), limits = c(1985, 2024), expand = c(0, 0)) +
+  scale_y_continuous(breaks = seq(0, 900000, by = 100000), expand = c(0, 0), labels = scales::label_comma()) +
+  theme(axis.title.x = element_text(vjust = -2, size = 7.5),
+        axis.title.y = element_text(vjust = 3, size = 7.5),
+        axis.text.x = element_text(size = 5.5),
+        axis.text.y = element_text(size = 5.5),
+        legend.text = element_text(size = 7.5))
 
 figure_1
   
@@ -73,10 +77,8 @@ Plot number of nonword trademark applications/publications per year from 1986-20
 
 ```{r nonword_totals}
 
-case_file_nonword_filtered <- case_file_filtered |>
-  filter(grepl('^2+', mark_draw_cd))
-
-case_file_filtered_nonword_totals <- case_file_nonword_filtered |>
+case_file_filtered_nonword_totals <- case_file_filtered |>
+  filter(grepl('^2+', mark_draw_cd)) |>
   #filter(supp_reg_in == 0) |>
   group_by(year) |>
   mutate(app_total_nonword = n()) |>
@@ -85,36 +87,32 @@ case_file_filtered_nonword_totals <- case_file_nonword_filtered |>
   group_by(year) |>
   mutate(pub_total_nonword = n()) |>
   select(year, app_total_nonword, pub_total_nonword) |>
-  filter(!duplicated(year))
-
-case_file_filtered_nonword_percentages <- case_file_filtered_nonword_totals |>
+  filter(!duplicated(year)) |>
   mutate(percentage = pub_total_nonword/pub_total_nonword)
   
-molten_filtered_nonword_totals <- melt(case_file_filtered_nonword_totals, id = 'year')
-molten_filtered_nonword_totals$variable <- factor(molten_filtered_nonword_totals$variable, levels = rev(levels(molten_filtered_nonword_totals$variable)))
+molten_filtered_nonword_totals <- pivot_longer(select(case_file_filtered_nonword_totals, year, pub_total_nonword, app_total_nonword), cols = c('pub_total_nonword', 'app_total_nonword'), names_to = 'variable', values_to = 'total')
 
 merged_app_totals <- full_join(case_file_filtered_totals, case_file_filtered_nonword_totals, by = 'year') |>
   select(year, app_total, app_total_nonword) |>
-  mutate(percentage = app_total_nonword/app_total)
+  mutate(percentage_nonword = app_total_nonword/app_total)
 
 ```
 
 ```{r plot_nonword_totals}
 
-library(patchwork)
-
 tikz(file = './graphics/figure_2.tex', width = 4.5, height = 4)
 
-figure_2 <- ggplot(molten_filtered_nonword_totals, aes(year, value, fill = variable)) +
-  geom_col(position = 'dodge') +
+figure_2 <- ggplot(molten_filtered_nonword_totals, aes(year, total, fill = variable)) +
+  geom_col(position = position_dodge2(reverse = FALSE)) +
   labs(x = 'Year', y = 'Number') +
-  scale_fill_manual(name = '', labels = c('Publications', 'Applications'), values = c('#099999', '#203769')) +
-  scale_x_continuous(breaks = seq(1985, 2025, by = 5), limits = c(1986, 2023), expand = c(0, 0)) +
-  scale_y_continuous(breaks = seq(0, 18000, by = 1000), expand = c(0, 0), labels = scales::label_comma()) +
-  theme(axis.title.x = element_text(vjust = -2, size = 10),
-        axis.title.y = element_text(vjust = 3, size = 10),
-        axis.text.x = element_text(size = 6),
-        axis.text.y = element_text(size = 6))
+  scale_fill_manual(name = '', labels = c('Applications', 'Publications'), values = c('#203769', '#099999')) +
+  scale_x_continuous(breaks = seq(1985, 2024, by = 5), limits = c(1985, 2024), expand = c(0, 0)) +
+  scale_y_continuous(breaks = seq(0, 16000, by = 2000), expand = c(0, 0), labels = scales::label_comma()) +
+  theme(axis.title.x = element_text(vjust = -2, size = 7.5),
+        axis.title.y = element_text(vjust = 3, size = 7.5),
+        axis.text.x = element_text(size = 5.5),
+        axis.text.y = element_text(size = 5.5),
+        legend.text = element_text(size = 7.5))
 
 figure_2
   
@@ -127,15 +125,15 @@ dev.off()
 
 tikz(file = './graphics/figure_3.tex', width = 4, height = 3)
 
-figure_3 <- ggplot(merged_app_totals, aes(year, percentage)) +
+figure_3 <- ggplot(merged_app_totals, aes(year, percentage_nonword)) +
   geom_line(linewidth = 1.25) +
   labs(x = 'Year', y = 'Nonword Applications \n / Total Applications') +
   scale_x_continuous(breaks = seq(1985, 2025, by = 5), limits = c(1986, 2023), expand = c(0, 0)) +
   scale_y_continuous(breaks = seq(0.02, 0.05, by = 0.01), limits = c(0.02, 0.05), expand = c(0, 0)) +
-  theme(axis.title.x = element_text(vjust = -2, size = 10),
-        axis.title.y = element_text(vjust = 3, size = 10),
-        axis.text.x = element_text(size = 6),
-        axis.text.y = element_text(size = 6))
+  theme(axis.title.x = element_text(vjust = -2, size = 7.5),
+        axis.title.y = element_text(vjust = 3, size = 7.5),
+        axis.text.x = element_text(size = 5.5),
+        axis.text.y = element_text(size = 5.5))
 
 figure_3
 
@@ -150,15 +148,20 @@ Compute aggregate stats for nonword marks:
 # merge design_search data with case_file data
 
 df <- right_join(case_file_filtered, design_search, by = 'serial_no') |>
-  select(serial_no, filing_dt, registration_no, registration_dt, publication_dt, mark_draw_cd, mark_id_char, design_search_cd, acq_dist_in, lb_use_file_in, supp_reg_in, serv_mark_in, trade_mark_in, cert_mark_in, coll_memb_mark_in, coll_serv_mark_in, coll_trade_mark_in, cert_mark_in, draw_color_cur_in, abandon_dt, reg_cancel_dt) |>
+  arrange('filing_dt') |>
   filter(grepl('^2+', mark_draw_cd))
   
-
 ```
 
 ```{r code_aggregate_stats}
 
+basic <- c('01.01.01', '01.01.02', '01.01.03', '01.01.04', '01.01.05', '01.01.06', '01.01.07', '01.01.09', '01.01.10', '01.01.11', '01.01.12', '01.01.13', '01.01.14', '01.03.03', '01.03.04', '01.05.01', '01.05.04', '01.05.25', '01.07.02', '01.07.04', '01.07.07', '01.07.08', '01.07.25', '01.09.01', '01.09.03', '01.09.05', '01.09.25', '01.11.01', '01.11.02', '01.11.25', '01.15.01', '01.15.02', '01.15.03', '01.15.04', '01.15.05', '01.15.06', '01.15.07', '01.15.08', '01.15.09', '01.15.10', '01.15.11', '01.15.12', '01.15.13', '01.15.15', '01.15.17', '01.15.18', '01.15.24', '01.15.25', '25.01.01', '25.01.25', '25.03.01', '25.03.02', '25.03.03', '25.03.04', '25.03.05', '25.03.25', '26.01.01', '26.01.02', '26.01.03', '26.01.04', '26.01.05', '26.01.06', '26.01.07', '26.01.08', '26.01.09', '26.01.11', '26.01.12', '26.01.13', '26.01.15', '26.01.16', '26.01.17', '26.01.18', '26.01.20', '26.01.21', '26.01.26', '26.01.27', '26.01.28', '26.01.29', '26.01.30', '26.01.31', '26.03.01', '26.03.02', '26.03.03', '26.03.04', '26.03.05', '26.03.07', '26.03.08', '26.03.09', '26.03.11', '26.03.12', '26.03.13', '26.03.14', '26.03.16', '26.03.17', '26.03.21', '26.03.28', '26.05.01', '26.05.02', '26.05.03', '26.05.05', '26.05.07', '26.05.08', '26.05.09', '26.05.12', '26.05.13', '26.05.14', '26.05.15', '26.05.16', '26.05.20', '26.05.21', '26.05.25', '26.05.28', '26.07.01', '26.07.02', '26.07.03', '26.07.12', '26.07.13', '26.07.14', '26.07.15', '26.07.21', '26.07.28', '26.09.01', '26.09.02', '26.09.03', '26.09.05', '26.09.07', '26.09.08', '26.09.09', '26.09.12', '26.09.13', '26.09.14', '26.09.16', '26.09.20', '26.09.21', '26.09.25', '26.09.28', '26.11.01', '26.11.02', '26.11.03', '26.11.05', '26.11.07', '26.11.08', '26.11.09', '26.11.10', '26.11.11', '26.11.12', '26.11.13', '26.11.14', '26.11.16', '26.11.20', '26.11.21', '26.11.25', '26.11.26', '26.11.27', '26.11.28', '26.13.01', '26.13.02', '26.13.03', '26.13.07', '26.13.08', '26.13.09', '26.13.12', '26.13.13', '26.13.14', '26.13.16', '26.13.21', '26.13.25', '26.13.28', '26.15.01', '26.15.02', '26.15.03', '26.15.07', '26.15.08', '26.15.09', '26.15.12', '26.15.13', '26.15.16', '26.15.20', '26.15.21', '26.15.25', '26.15.27', '26.15.28', '26.17.01', '26.17.02', '26.17.03', '26.17.04', '26.17.05', '26.17.06', '26.17.07', '26.17.08', '26.17.09', '26.17.10', '26.17.12', '26.17.25', '26.19.01', '26.19.02', '26.19.03', '26.19.04', '26.19.05', '26.19.25')
+
+basic_stripped <- as.data.frame(as.numeric(gsub('[[:punct:]]', '', basic))) |>
+  rename('design_search_cd' = 'as.numeric(gsub(\"[[:punct:]]\", \"\", basic))')
+
 df_no_codes <- case_file |>
+  arrange('filing_dt') |>
   filter(filing_dt >= '1986-01-01', filing_dt < '2024-01-01') |>
   mutate(year = year(filing_dt)) |>
   filter(grepl('^2+|^3+', mark_draw_cd)) |>
@@ -183,63 +186,44 @@ median(df_no_codes$n)
 
 ```
 
-```{r code_density_distribution}
-
-tikz(file = './graphics/figure_4.tex', width = 6.5, height = 4)
-
-figure_4.1 <- ggplot(df_no_codes, aes(n)) +
-  geom_histogram(binwidth = 1, aes(y = ..density..), fill = "#099999") +
-  labs(x = 'Number of Design Search Codes', y = 'Density') +
-  #stat_function(fun = dnorm, colour = "#203769", linewidth = 3.25, args = list(mean = mean(df_no_codes$n), sd = sd(df_no_codes$n))) +
-  scale_x_continuous(breaks = seq(0, 70, by = 5), limits = c(0, 70), expand = c(0, 0)) +
-  scale_y_continuous(breaks = seq(0.00, 0.25, by = 0.05), expand = c(0, 0)) +
-  theme(axis.title.x = element_text(vjust = -1.25, size = 10),
-        axis.title.y = element_text(vjust = 3, size = 10),
-        axis.text.x = element_text(size = 6),
-        axis.text.y = element_text(size = 6))
-
-figure_4.1
-
-dev.off()
-
-```
-
 ```{r code_per_year_stats}
 
 df_no_codes_per_year <- df |>
   group_by(serial_no) |>
+  #mutate(writing = case_when(grepl('^27+|^28+|^2901+', design_search_cd) == TRUE ~ 1, TRUE ~ 0)) |>
+  #mutate(writing = max(writing)) |>
   mutate(n = n()) |>
+  filter(!duplicated(serial_no)) |>
+  #filter(max(writing) != '1') |>
   ungroup() |>
   group_by(year) |>
-  summarise(mean = mean(n), median = median(n))
+  summarise(mean = mean(n), median = median(n)) |>
+  pivot_longer(cols = c('mean', 'median'), names_to = 'measure', values_to = 'value')
 
 ```
 
 ```{r plot_design_search_code_per_year_stats}
 
-tikz(file = './graphics/figure_5.tex', width = 5.5, height = 3.5)
+tikz(file = './graphics/figure_4.tex', width = 5, height = 3.5)
 
-figure_5.1 <- ggplot(df_no_codes_per_year, aes(year, mean)) +
-  geom_line(linewidth = 1.5) +
-  labs(x = 'Year', y = 'Mean Number of Codes') +
+figure_4 <- ggplot(df_no_codes_per_year, aes(year, value, color = measure)) +
+  geom_line(linewidth = 1.25) +
+  labs(x = 'Year', y = 'Value') +
+  scale_color_manual(
+    name = '',
+    labels = c('Per-year mean', 'Per-year median'),
+    values = c('#203769', '#099999')
+  ) +
   scale_x_continuous(breaks = seq(1985, 2025, by = 5), limits = c(1986, 2024), expand = c(0, 0)) +
-  scale_y_continuous(breaks = seq(3, 6, by = 0.5), limits = c(3, 6), expand = c(0, 0)) +
-  theme(axis.title.x = element_text(vjust = -3, size = 10),
-        axis.title.y = element_text(vjust = 3, size = 10),
-        axis.text.x = element_text(vjust = 0.3, angle = 45, size = 6),
-        axis.text.y = element_text(size = 6))
+  scale_y_continuous(breaks = seq(1.5, 4, by = 0.5), limits = c(1.5, 4), expand = c(0, 0)) +
+  theme(axis.title.x = element_text(vjust = -3, size = 7.5),
+        axis.title.y = element_text(vjust = 3, size = 7.5),
+        axis.text.x = element_text(vjust = 0.3, angle = 45, size = 5.5),
+        axis.text.y = element_text(size = 5.5),
+        legend.text = element_text(size = 7.5))
 
-figure_5.2 <- ggplot(df_no_codes_per_year, aes(year, median)) +
-  geom_col() +
-  labs(x = 'Year', y = 'Median Number of Codes') +
-  scale_x_continuous(breaks = seq(1985, 2025, by = 5), limits = c(1986, 2024), expand = c(0, 0)) +
-  scale_y_continuous(breaks = seq(0, 6, by = 0.5), limits = c(0, 6), expand = c(0, 0)) +
-  theme(axis.title.x = element_text(vjust = -3, size = 10),
-        axis.title.y = element_text(vjust = 3, size = 10),
-        axis.text.x = element_text(vjust = 0.3, angle = 45, size = 6),
-        axis.text.y = element_text(size = 6))
 
-figure_5.1 + figure_5.2
+figure_4
   
 dev.off()
 
@@ -247,109 +231,81 @@ dev.off()
 
 ```{r super_calculations}
 
-df_1 <- df |>
-  #filter(supp_reg_in == '0') |>
-  #filter(filing_dt > '2007-01-07')
+super_totals_per_year <- df |>
+  filter(supp_reg_in == '0') |>
+  #filter(filing_dt > '2007-01-07') |>
   mutate(writing = case_when(grepl('^27+|^28+|^2901+', design_search_cd) == TRUE ~ 1, TRUE ~ 0)) |>
   group_by(serial_no) |>
-  filter(max(writing) != '1') |>
   mutate(n = n()) |>
+  mutate(writing = max(writing)) |>
   ungroup() |>
   filter(!duplicated(serial_no)) |>
-  group_by(year)
-
-super3_totals_per_year <- df_1 |>
-  filter(n > 3) |>
-  summarise(super3 = n())
-
-super5_totals_per_year <- df_1 |>
-  filter(n > 5) |>
-  summarise(super5 = n())
-
-super10_totals_per_year <- df_1 |>
-  filter(n > 10) |>
-  summarise(super10 = n())
-
-super15_totals_per_year <- df_1 |>
-  filter(n > 15) |>
-  summarise(super15 = n())
-
-super_totals_per_year <- super3_totals_per_year |>
-  full_join(super5_totals_per_year) |>
-  full_join(super10_totals_per_year) |>
-  full_join(super15_totals_per_year)
+  filter(writing != '1') |>
+  group_by(year) |>
+  mutate(super5 = case_when(n > 5 ~ 1, TRUE ~ 0)) |>
+  mutate(super10 = case_when(n > 10 ~ 1, TRUE ~ 0)) |>
+  mutate(super15 = case_when(n > 15 ~ 1, TRUE ~ 0)) |>
+  select(year, super5, super10, super15) |>
+  group_by(year) |>
+  mutate(super5 = sum(super5)) |>
+  mutate(super10 = sum(super10)) |>
+  mutate(super15 = sum(super15)) |>
+  filter(!duplicated(year)) |>
+  full_join(case_file_filtered_totals) |>
+  full_join(case_file_filtered_nonword_totals) |>
+  mutate(percentage5 = super5/app_total) |>
+  mutate(percentage10 = super10/app_total) |>
+  mutate(percentage15 = super15/app_total)
+  
 
 ```
 
 ```{r super_plots}
 
-tikz(file = './graphics/figure_6.tex', width = 5.75, height = 3.5)
+tikz(file = './graphics/figure_5.tex', width = 5.75, height = 3.5)
 
-#figure_6.1 <- ggplot(super_totals_per_year, aes(year, super3)) +
- #geom_col() +
-  #labs(x = 'Year', y = 'Number of Applications with $>$ 3 Codes') +
-  #scale_x_continuous(breaks = seq(1985, 2023, by = 10), expand = c(0, 0)) +
-  #scale_y_continuous(breaks = seq(0, 9000, by = 1000), expand = c(0, 0)) +
-  #theme_classic()
-
-figure_6.2 <- ggplot(super_totals_per_year, aes(year, super5)) +
-  geom_col() +
+figure_5.1 <- ggplot(super_totals_per_year, aes(year, super5)) +
+  geom_col(fill = '#203769') +
   labs(x = 'Year', y = 'Number of Applications with $>$ 5 Codes') +
   scale_x_continuous(breaks = seq(1985, 2023, by = 5), expand = c(0, 0)) +
-  scale_y_continuous(breaks = seq(0, 3500, by = 500), expand = c(0, 0)) +
-  theme(axis.title.x = element_text(vjust = -3, size = 7),
-        axis.title.y = element_text(vjust = 3, size = 7),
-        axis.text.x = element_text(vjust = 0.3, angle = 45, size = 6),
-        axis.text.y = element_text(size = 6))
+  scale_y_continuous(breaks = seq(0, 3500, by = 250), expand = c(0, 0)) +
+  theme(axis.title.x = element_text(vjust = -3, size = 7.5),
+        axis.title.y = element_text(vjust = 3, size = 7.5),
+        axis.text.x = element_text(vjust = 0.3, angle = 45, size = 5.5),
+        axis.text.y = element_text(size = 5.5))
 
-figure_6.3 <- ggplot(super_totals_per_year, aes(year, super10)) +
-  geom_col() +
+figure_5.2 <- ggplot(super_totals_per_year, aes(year, super10)) +
+  geom_col(fill = '#203769') +
   labs(x = 'Year', y = 'Number of Applications with $>$ 10 Codes') +
   scale_x_continuous(breaks = seq(1985, 2023, by = 5), expand = c(0, 0)) +
-  scale_y_continuous(breaks = seq(0, 300, by = 50), expand = c(0, 0)) +
-  theme(axis.title.x = element_text(vjust = -3, size = 7),
-        axis.title.y = element_text(vjust = 3, size = 7),
-        axis.text.x = element_text(vjust = 0.3, angle = 45, size = 6),
-        axis.text.y = element_text(size = 6))
+  scale_y_continuous(breaks = seq(0, 300, by = 25), expand = c(0, 0)) +
+  theme(axis.title.x = element_text(vjust = -3, size = 7.5),
+        axis.title.y = element_text(vjust = 3, size = 7.5),
+        axis.text.x = element_text(vjust = 0.3, angle = 45, size = 5.5),
+        axis.text.y = element_text(size = 5.5))
   
-figure_6.4 <- ggplot(super_totals_per_year, aes(year, super15)) +
-  geom_col() +
+figure_5.3 <- ggplot(super_totals_per_year, aes(year, super15)) +
+  geom_col(fill = '#203769') +
   labs(x = 'Year', y = 'Number of Applications with $>$ 15 Codes') +
   scale_x_continuous(breaks = seq(1985, 2023, by = 5), expand = c(0, 0)) +
   scale_y_continuous(breaks = seq(0, 60, by = 5), expand = c(0, 0)) +
-  theme(axis.title.x = element_text(vjust = -3, size = 7),
-        axis.title.y = element_text(vjust = 3, size = 7),
-        axis.text.x = element_text(vjust = 0.3, angle = 45, size = 6),
-        axis.text.y = element_text(size = 6))
+  theme(axis.title.x = element_text(vjust = -3, size = 7.5),
+        axis.title.y = element_text(vjust = 3, size = 7.5),
+        axis.text.x = element_text(vjust = 0.3, angle = 45, size = 5.5),
+        axis.text.y = element_text(size = 5.5))
 
-figure_6.2 + figure_6.3 + figure_6.4
+figure_5.1 + figure_5.2 + figure_5.3
 
 dev.off()
 
 ```
 
-Get outliers as a percentage of applications per year:
-
-```{r super_percentage}
-
-super_percentages_per_year <- super_totals_per_year |>
-  full_join(case_file_filtered_totals) |>
-  full_join(case_file_filtered_nonword_totals) |>
-  mutate(percentage5 = super5/app_total) |>
-  mutate(percentage10 = super10/app_total) |>
-  mutate(percentage15 = super15/app_total) |>
-  mutate(percentage_nonword = app_total_nonword/app_total)
-
-super_percentages_per_year[is.na(super_percentages_per_year)] <- 0
-
-```
-
 ```{r super_percentage_plot}
 
-tikz(file = './graphics/figure_7.tex', width = 5.75, height = 3.5)
+tikz(file = './graphics/figure_6.tex', width = 5.75, height = 3.5)
 
-figure_7.0 <- ggplot(super_percentages_per_year, aes(year, percentage5)) +
-  geom_line() +
+figure_6.1 <- ggplot(super_totals_per_year, aes(year, percentage5)) +
+  geom_line(linewidth = 0.75) +
   labs(x = 'Year', y = 'Nonword Applications with $>$ 5 Codes\n / All Applications') +
   scale_x_continuous(breaks = seq(1985, 2023, by = 5), expand = c(0, 0)) +
   scale_y_continuous(breaks = seq(0.001, 0.005, by = 0.001), limits = c(0.001, 0.005), expand = c(0, 0)) +
@@ -358,8 +314,8 @@ figure_7.0 <- ggplot(super_percentages_per_year, aes(year, percentage5)) +
         axis.text.x = element_text(vjust = 0.3, angle = 45, size = 6),
         axis.text.y = element_text(size = 6))
 
-figure_7.1 <- ggplot(super_percentages_per_year, aes(year, percentage10)) +
-  geom_line() +
+figure_6.2 <- ggplot(super_totals_per_year, aes(year, percentage10)) +
+  geom_line(linewidth = 0.75) +
   labs(x = 'Year', y = 'Nonword Applications with $>$ 10 Codes\n / All Applications') +
   scale_x_continuous(breaks = seq(1985, 2023, by = 5), expand = c(0, 0)) +
   scale_y_continuous(labels = scales::label_number(), expand = c(0, 0)) +
@@ -368,8 +324,8 @@ figure_7.1 <- ggplot(super_percentages_per_year, aes(year, percentage10)) +
         axis.text.x = element_text(vjust = 0.3, angle = 45, size = 6),
         axis.text.y = element_text(size = 6))
 
-figure_7.2 <- ggplot(super_percentages_per_year, aes(year, percentage15)) +
-  geom_line() +
+figure_6.3 <- ggplot(super_totals_per_year, aes(year, percentage15)) +
+  geom_line(linewidth = 0.75) +
   labs(x = 'Year', y = 'Nonword Applications with $>$ 15 Codes\n / All Applications') +
   scale_x_continuous(breaks = seq(1985, 2023, by = 5), expand = c(0, 0)) +
   scale_y_continuous(labels = scales::label_number(), expand = c(0, 0)) +
@@ -378,7 +334,7 @@ figure_7.2 <- ggplot(super_percentages_per_year, aes(year, percentage15)) +
         axis.text.x = element_text(vjust = 0.3, angle = 45, size = 6),
         axis.text.y = element_text(size = 6))
 
-figure_7.0 + figure_7.1 + figure_7.2
+figure_6.1 + figure_6.2 + figure_6.3
 
 dev.off()
 
@@ -486,11 +442,6 @@ figure_8.1 + figure_8.2
 ```
 
 ```{r nonbasic_stats}
-
-basic <- c('01.01.01', '01.01.02', '01.01.03', '01.01.04', '01.01.05', '01.01.06', '01.01.07', '01.01.09', '01.01.10', '01.01.11', '01.01.12', '01.01.13', '01.01.14', '01.03.03', '01.03.04', '01.05.01', '01.05.04', '01.05.25', '01.07.02', '01.07.04', '01.07.07', '01.07.08', '01.07.25', '01.09.01', '01.09.03', '01.09.05', '01.09.25', '01.11.01', '01.11.02', '01.11.25', '01.15.01', '01.15.02', '01.15.03', '01.15.04', '01.15.05', '01.15.06', '01.15.07', '01.15.08', '01.15.09', '01.15.10', '01.15.11', '01.15.12', '01.15.13', '01.15.15', '01.15.17', '01.15.18', '01.15.24', '01.15.25', '25.01.01', '25.01.25', '25.03.01', '25.03.02', '25.03.03', '25.03.04', '25.03.05', '25.03.25', '26.01.01', '26.01.02', '26.01.03', '26.01.04', '26.01.05', '26.01.06', '26.01.07', '26.01.08', '26.01.09', '26.01.11', '26.01.12', '26.01.13', '26.01.15', '26.01.16', '26.01.17', '26.01.18', '26.01.20', '26.01.21', '26.01.26', '26.01.27', '26.01.28', '26.01.29', '26.01.30', '26.01.31', '26.03.01', '26.03.02', '26.03.03', '26.03.04', '26.03.05', '26.03.07', '26.03.08', '26.03.09', '26.03.11', '26.03.12', '26.03.13', '26.03.14', '26.03.16', '26.03.17', '26.03.21', '26.03.28', '26.05.01', '26.05.02', '26.05.03', '26.05.05', '26.05.07', '26.05.08', '26.05.09', '26.05.12', '26.05.13', '26.05.14', '26.05.15', '26.05.16', '26.05.20', '26.05.21', '26.05.25', '26.05.28', '26.07.01', '26.07.02', '26.07.03', '26.07.12', '26.07.13', '26.07.14', '26.07.15', '26.07.21', '26.07.28', '26.09.01', '26.09.02', '26.09.03', '26.09.05', '26.09.07', '26.09.08', '26.09.09', '26.09.12', '26.09.13', '26.09.14', '26.09.16', '26.09.20', '26.09.21', '26.09.25', '26.09.28', '26.11.01', '26.11.02', '26.11.03', '26.11.05', '26.11.07', '26.11.08', '26.11.09', '26.11.10', '26.11.11', '26.11.12', '26.11.13', '26.11.14', '26.11.16', '26.11.20', '26.11.21', '26.11.25', '26.11.26', '26.11.27', '26.11.28', '26.13.01', '26.13.02', '26.13.03', '26.13.07', '26.13.08', '26.13.09', '26.13.12', '26.13.13', '26.13.14', '26.13.16', '26.13.21', '26.13.25', '26.13.28', '26.15.01', '26.15.02', '26.15.03', '26.15.07', '26.15.08', '26.15.09', '26.15.12', '26.15.13', '26.15.16', '26.15.20', '26.15.21', '26.15.25', '26.15.27', '26.15.28', '26.17.01', '26.17.02', '26.17.03', '26.17.04', '26.17.05', '26.17.06', '26.17.07', '26.17.08', '26.17.09', '26.17.10', '26.17.12', '26.17.25', '26.19.01', '26.19.02', '26.19.03', '26.19.04', '26.19.05', '26.19.25')
-
-basic_stripped <- as.data.frame(as.numeric(gsub('[[:punct:]]', '', basic))) |>
-  rename('design_search_cd' = 'as.numeric(gsub(\"[[:punct:]]\", \"\", basic))')
 
 df_basic <- df |>
   semi_join(basic_stripped, by = 'design_search_cd') |>
